# burping-slugs

./: .gitignore  README.md  app.py  audio_utils.py  cd_utils.py  ctl.sh  pyproject.toml  supervisord.conf  url_downloader.py
static/: app.js  style.css
templates/: index.html
